--- a/1-introduction/0-just-ec2.yaml
+++ b/1-introduction/0-just-ec2.yaml
@@ -3,6 +3,6 @@ Resources:
   MyInstance:
     Type: AWS::EC2::Instance
     Properties:
-      AvailabilityZone: us-east-1a
+      AvailabilityZone: eu-west-1
       ImageId: ami-a4c7edb2
       InstanceType: t2.micro
