--- a/1-introduction/1-ec2-with-sg-eip.yaml
+++ b/1-introduction/1-ec2-with-sg-eip.yaml
@@ -3,7 +3,7 @@ Resources:
   MyInstance:
     Type: AWS::EC2::Instance
     Properties:
-      AvailabilityZone: us-east-1a
+      AvailabilityZone: eu-west-1
       ImageId: ami-a4c7edb2
       InstanceType: t2.micro
       SecurityGroups:
