--- a/5-mappings/0-mappings-ec2.yaml
+++ b/5-mappings/0-mappings-ec2.yaml
@@ -2,7 +2,9 @@ Parameters:
   EnvironmentName:
     Description: Environment Name
     Type: String
-    AllowedValues: [development, production]
+    AllowedValues: 
+      - development
+      - production
     ConstraintDescription: must be development or production
 
 Mappings:
