--- a/6-outputs/1-reference-ssh-security-group.yaml
+++ b/6-outputs/1-reference-ssh-security-group.yaml
@@ -3,7 +3,7 @@ Resources:
     # http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-instance.html
     Type: AWS::EC2::Instance
     Properties:
-      AvailabilityZone: us-east-1a
+      AvailabilityZone: eu-west-1
       ImageId: ami-a4c7edb2
       InstanceType: t2.micro
       SecurityGroups:
